<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".Registration">


    <TextView
        android:id="@+id/registrationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/regisztracio"
        android:textAlignment="center"

        android:textColor="@color/text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/vezeteknev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:textColorHint="@color/text"
        android:textColor="@color/text"

        android:hint="@string/vezeteknev"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/keresztnev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:textColorHint="@color/text"
        android:textColor="@color/text"

        android:hint="@string/keresztnev"
        android:inputType="text"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/cim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:textColorHint="@color/text"
        android:textColor="@color/text"

        android:hint="@string/cim"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/merooragysz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:textColorHint="@color/text"
        android:textColor="@color/text"

        android:hint="@string/merooragysz"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:textColorHint="@color/text"
        android:textColor="@color/text"

        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/jelszo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:textColorHint="@color/text"
        android:textColor="@color/text"

        android:hint="@string/jelszo"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/jelszoujra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:textColorHint="@color/text"
        android:textColor="@color/text"

        android:hint="@string/jelszoujra"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".Registration">

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:onClick="registration"
            android:backgroundTint="@color/button"
            android:text="@string/regisztracio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="5dp"
            android:onClick="cancel"
            android:backgroundTint="@color/button"
            android:text="@string/megse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/registrationButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
</ScrollView>