<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray">
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"

tools:context=".Home">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"

        android:textColor="@color/text"
        android:text="Üdvözöllek!"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/diktalas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:onClick="diktalas"
        android:backgroundTint="@color/button"
        android:text="@string/diktalas" />

    <Button
        android:id="@+id/szamlaim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:onClick="szamlaim"
        android:backgroundTint="@color/button"
        android:text="@string/szamlaim"
        />

    <Button
        android:id="@+id/adataim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:onClick="adataim"
        android:backgroundTint="@color/button"
        android:text="@string/adataim" />

    <Button
        android:id="@+id/kilepes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:onClick="onExit"
        android:backgroundTint="@color/button"
        android:text="@string/kilepes" />
</LinearLayout>
</ScrollView>